--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
   <title> WKD </title>
   <!-- favicon -->
   <link rel="icon" type="image/x-icon" href="img/logo.svg" />
-  <!-- Bootstrap -->
-  <link rel="stylesheet" href="css/bootstrap.rtl.min.css" />
   <!-- aos -->
   <link rel="stylesheet" href="css/aos.css" />
   <!-- odometer -->
@@ -33,7 +31,7 @@
       <div class="navMenu">
         <a class="navLink" href="index.html"> الرئيسية </a>
         <a class="navLink" href="#!"> من نحن </a>
-        <a class="navLink" href="#!"> تواصل معنا </a>
+        <a class="navLink btn" href="#!"> تواصل معنا </a>
       </div>
       <!-- toggle btn -->
       <div class="navBtn">
@@ -48,22 +46,174 @@
   <!--((((((((((((((((((( content )))))))))))))))))))-->
   <!--(((((((((((((((((((((((()))))))))))))))))))))))-->
   <content>
-
+    <!-- main section -->
+    <section class="mainSection" style="background: linear-gradient(-45deg, #ad2b3275, #ad2b32af), url(img/main.webp)">
+      <h1 data-aos="fade-down"> شركة نيسان وكب لصيانة السيارات </h1>
+      <h5 data-aos="fade-up" data-aos-delay="500"> أفضل مركز متخصص في صيانة سيارات نيسان      </h5>
+    </section>
   </content>
   <!--(((((((((((((((((((((((()))))))))))))))))))))))-->
   <!--((((((((((((((((( / content )))))))))))))))))))-->
   <!--(((((((((((((((((((((((()))))))))))))))))))))))-->
   <!-- ================ Footer ================= -->
   <footer>
-    كل الحقوق محفوظة
-    <a class="company" href="#!" target="_blank">
-      <img src="img/romoz_logo.png" alt="">
-      Nami
-    </a>
-    <script>
-      document.write(new Date().getFullYear())
-    </script>
-    &copy;
+    <!-- copy Right -->
+    <div class="copyRight">
+      كل الحقوق محفوظة
+      <a class="company" href="#!" target="_blank">
+        <img src="img/romoz_logo.png" alt="">
+        Nami
+      </a>
+      <script>
+        document.write(new Date().getFullYear())
+      </script>
+      &copy;
+    </div>
+    <!-- script icons-->
+    <div class="support">
+      <div class="links">
+        <a href="#!" target="_blank" class="whatsapp">
+          <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+            xmlns:svgjs="http://svgjs.com/svgjs" width="24" height="24" x="0" y="0" viewBox="0 0 512 512"
+            style="enable-background:new 0 0 512 512" xml:space="preserve">
+            <g>
+              <g>
+                <g>
+                  <path
+                    d="M256.064,0h-0.128C114.784,0,0,114.816,0,256c0,56,18.048,107.904,48.736,150.048l-31.904,95.104l98.4-31.456
+                  C155.712,496.512,204,512,256.064,512C397.216,512,512,397.152,512,256S397.216,0,256.064,0z M405.024,361.504
+                  c-6.176,17.44-30.688,31.904-50.24,36.128c-13.376,2.848-30.848,5.12-89.664-19.264C189.888,347.2,141.44,270.752,137.664,265.792
+                  c-3.616-4.96-30.4-40.48-30.4-77.216s18.656-54.624,26.176-62.304c6.176-6.304,16.384-9.184,26.176-9.184
+                  c3.168,0,6.016,0.16,8.576,0.288c7.52,0.32,11.296,0.768,16.256,12.64c6.176,14.88,21.216,51.616,23.008,55.392
+                  c1.824,3.776,3.648,8.896,1.088,13.856c-2.4,5.12-4.512,7.392-8.288,11.744c-3.776,4.352-7.36,7.68-11.136,12.352
+                  c-3.456,4.064-7.36,8.416-3.008,15.936c4.352,7.36,19.392,31.904,41.536,51.616c28.576,25.44,51.744,33.568,60.032,37.024
+                  c6.176,2.56,13.536,1.952,18.048-2.848c5.728-6.176,12.8-16.416,20-26.496c5.12-7.232,11.584-8.128,18.368-5.568
+                  c6.912,2.4,43.488,20.48,51.008,24.224c7.52,3.776,12.48,5.568,14.304,8.736C411.2,329.152,411.2,344.032,405.024,361.504z"
+                    fill="#ffffff" data-original="#ffffff"></path>
+                </g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+            </g>
+          </svg>
+        </a>
+        <a href="#!" target="_blank" class="call">
+          <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+            xmlns:svgjs="http://svgjs.com/svgjs" width="24" height="24" x="0" y="0" viewBox="0 0 32 32"
+            style="enable-background:new 0 0 512 512" xml:space="preserve">
+            <g>
+              <path
+                d="m29.393 23.36c-.874-.733-6-3.979-6.852-3.83-.4.071-.706.412-1.525 1.389a11.687 11.687 0 0 1 -1.244 1.347 10.757 10.757 0 0 1 -2.374-.88 14.7 14.7 0 0 1 -6.784-6.786 10.757 10.757 0 0 1 -.88-2.374 11.687 11.687 0 0 1 1.347-1.244c.976-.819 1.318-1.123 1.389-1.525.149-.854-3.1-5.978-3.83-6.852-.306-.362-.584-.605-.94-.605-1.032 0-5.7 5.772-5.7 6.52 0 .061.1 6.07 7.689 13.791 7.721 7.589 13.73 7.689 13.791 7.689.748 0 6.52-4.668 6.52-5.7 0-.356-.243-.634-.607-.94z"
+                fill="#FFFFFF" data-original="#ffffff"></path>
+              <path d="m23 15h2a8.009 8.009 0 0 0 -8-8v2a6.006 6.006 0 0 1 6 6z" fill="#FFFFFF" data-original="#ffffff">
+              </path>
+              <path d="m28 15h2a13.015 13.015 0 0 0 -13-13v2a11.013 11.013 0 0 1 11 11z" fill="#FFFFFF"
+                data-original="#ffffff"></path>
+            </g>
+          </svg>
+        </a>
+      </div>
+      <div class="supportBtn">
+        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+          xmlns:svgjs="http://svgjs.com/svgjs" width="24" height="24" x="0" y="0" viewBox="0 0 512 512"
+          style="enable-background:new 0 0 512 512" xml:space="preserve">
+          <g>
+            <g>
+              <g>
+                <path d="M136,210c-24.814,0-45,20.186-45,45v122c0,24.814,20.186,45,45,45c24.814,0,45-20.186,45-45V255
+              C181,230.186,160.814,210,136,210z" fill="#ffffff" data-original="#ffffff"></path>
+              </g>
+            </g>
+            <g>
+              <g>
+                <path d="M61,255c0-4.327,0.571-8.507,1.278-12.634C44.2,248.209,31,265.001,31,285v62c0,19.999,13.2,36.791,31.278,42.634
+              C61.571,385.507,61,381.327,61,377V255z" fill="#ffffff" data-original="#ffffff"></path>
+              </g>
+            </g>
+            <g>
+              <g>
+                <path d="M376,210c-24.814,0-45,20.186-45,45v122c0,24.814,20.186,45,45,45c4.51,0,8.782-0.868,12.892-2.108
+              C383.308,438.401,366.305,452,346,452h-47.763c-6.213-17.422-22.707-30-42.237-30c-24.814,0-45,20.186-45,45
+              c0,24.814,20.186,45,45,45c19.53,0,36.024-12.578,42.237-30H346c41.353,0,75-33.647,75-75v-30V255
+              C421,230.186,400.814,210,376,210z" fill="#ffffff" data-original="#ffffff"></path>
+              </g>
+            </g>
+            <g>
+              <g>
+                <path d="M449.722,242.366C450.429,246.493,451,250.673,451,255v122c0,4.327-0.571,8.507-1.278,12.634
+              C467.8,383.791,481,366.999,481,347v-62C481,265.001,467.8,248.209,449.722,242.366z" fill="#ffffff"
+                  data-original="#ffffff"></path>
+              </g>
+            </g>
+            <g>
+              <g>
+                <path d="M256,0C131.928,0,31,100.928,31,225v0.383c8.937-6.766,19.277-11.717,30.687-13.934C68.698,110.251,153.054,30,256,30
+              s187.302,80.251,194.313,181.448c11.409,2.217,21.749,7.169,30.687,13.934V225C481,100.928,380.072,0,256,0z"
+                  fill="#ffffff" data-original="#ffffff"></path>
+              </g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+          </g>
+        </svg>
+      </div>
+    </div>
   </footer>
   <!-- ================ /Footer ================= -->
   <!--////////////////////////////////////////////////////////////////////////////////-->
@@ -75,8 +225,6 @@
   <!--////////////////////////////////////////////////////////////////////////////////-->
   <!-- jquery  -->
   <script src="js/jquery.min.js"></script>
-  <!-- bootstrap -->
-  <script src="js/bootstrap.min.js"></script>
   <!-- apper  -->
   <script src="js/jquery.appear.js"></script>
   <!-- animation on scroll -->
