--- a/index.html
+++ b/index.html
@@ -134,14 +134,13 @@
             <div class="bgImage">
               <img data-atropos-offset="4" src="img/main.webp">
             </div>
-            <!-- <img data-atropos-offset="3" src="img/bg1.svg">
-            <img data-atropos-offset="6" src="img/bg2.svg">
-            <img data-atropos-offset="8" src="img/bg3.svg"> -->
-            <h1 data-atropos-offset="5" data-aos="fade-up" data-aos-delay="300"> شركة نيسان وكب لصيانة السيارات </h1>
-            <h5 data-atropos-offset="5" data-aos="fade-up" data-aos-delay="500"> أفضل مركز متخصص في صيانة سيارات نيسان
+            <h1 data-atropos-offset="5" data-aos="fade-up" data-aos-delay="300">
+              شركة نيسان وكب لصيانة السيارات
+            </h1>
+            <h5 data-atropos-offset="5" data-aos="fade-up" data-aos-delay="500">
+              أفضل مركز متخصص في صيانة سيارات نيسان
             </h5>
             <img class="logo" data-atropos-offset="5" src="img/logow.svg" data-aos="fade-up" data-aos-delay="700">
-
           </div>
         </div>
       </div>
