--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       <div class="navMenu">
         <a class="navLink" href="index.html"> الرئيسية </a>
         <a class="navLink" href="#!"> من نحن </a>
+        <a class="navLink" href="#!"> احجز الان </a>
         <a class="navLink btn" href="#!"> تواصل معنا </a>
       </div>
       <!-- toggle btn -->
@@ -707,6 +708,7 @@
         <div class="quickLinks">
           <a href="index.html"> الرئيسية </a>
           <a href="#!"> من نحن </a>
+          <a href="#!"> احجز الان </a>
           <a href="#!"> تواصل معنا </a>
         </div>
         <div class="social ">
