--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <img data-atropos-offset="4" src="img/main.webp">
             </div>
             <h1 data-atropos-offset="5" data-aos="fade-up" data-aos-delay="300">
-              شركة نيسان وكب لصيانة السيارات
+              شركة وكب السيارات
             </h1>
             <h5 data-atropos-offset="5" data-aos="fade-up" data-aos-delay="500">
               أفضل مركز متخصص في صيانة سيارات نيسان
@@ -97,7 +97,7 @@
       <!-- title -->
       <div class="title">
         <div class="side">
-          <p data-aos="fade-up"> نمتلك خبرة طويلة في مجالنا، ولذلك نستطيع تقديم خدمات متميّزة لك. </p>
+          <p data-aos="fade-up"> نمتلك خبرة طويلة في صيانة نيسان ، ولذلك نستطيع تقديم خدمات متميّزة لك. </p>
         </div>
         <span class="distance"></span>
         <div class="side">
@@ -556,7 +556,7 @@
               </svg>
             </div>
             <div class="data">
-              <h5> ظبط المكيف </h5>
+              <h5> ظبط التكييف </h5>
               <p> ببساطة نص شكلي (بمعنى أن الغاية هي الشكل وليس المحتوى) ويُستخدم في صناعات المطابع </p>
             </div>
           </div>
@@ -629,7 +629,7 @@
               </svg>
             </div>
             <div class="data">
-              <h5> الابواب والمرايا </h5>
+              <h5> الصيانة الدورية </h5>
               <p> ببساطة نص شكلي (بمعنى أن الغاية هي الشكل وليس المحتوى) ويُستخدم في صناعات المطابع </p>
             </div>
           </div>
@@ -798,7 +798,7 @@
         كل الحقوق محفوظة
         <a class="company" href="#!" target="_blank">
           <img src="img/romoz_logo.webp" alt="">
-          Nami
+          romoz
         </a>
         <script>
           document.write(new Date().getFullYear())
@@ -842,7 +842,8 @@
           </svg>
         </a>
         <!-- whatsapp -->
-        <a href="https://api.whatsapp.com/send/?phone=%2B966568782949&text&type=phone_number&app_absent=0" target="_blank" class="whatsapp">
+        <a href="https://api.whatsapp.com/send/?phone=%2B966568782949&text&type=phone_number&app_absent=0"
+          target="_blank" class="whatsapp">
           <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
             xmlns:svgjs="http://svgjs.com/svgjs" width="24" height="24" x="0" y="0" viewBox="0 0 512 512"
             style="enable-background:new 0 0 512 512" xml:space="preserve">
