--- a/index.html
+++ b/index.html
@@ -797,8 +797,8 @@
       <div class="copyR">
         كل الحقوق محفوظة
         <a class="company" href="#!" target="_blank">
-          <img src="img/romoz_logo.webp" alt="">
-          romoz
+          <img src="img/romoz_logo.png" alt="">
+          Romoz
         </a>
         <script>
           document.write(new Date().getFullYear())
