--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <!-- Required meta tags -->
   <meta charset="UTF-8" />
@@ -18,11 +17,10 @@
   <!-- odometer -->
   <link rel="stylesheet" href="css/odometer.min.css" />
   <!-- Swiper -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="css/swiper-bundle.min.css" />
   <!-- Custom style  -->
   <link rel="stylesheet" href="css/style.css" />
 </head>
-
 <body>
   <div class="spinner">
     <div class="loader">
@@ -55,7 +53,6 @@
       <div class="navMenu">
         <a class="navLink" href="index.html"> الرئيسية </a>
         <a class="navLink" href="#!"> من نحن </a>
-        <a class="navLink" href="#!"> احجز الان </a>
         <a class="navLink btn" href="#!"> تواصل معنا </a>
       </div>
       <!-- toggle btn -->
@@ -77,7 +74,26 @@
         <div class="atropos-rotate">
           <div class="atropos-inner">
             <div class="bgImage">
-              <img data-atropos-offset="4" src="img/main.webp">
+              <!-- Swiper -->
+              <div class="swiper topSlider">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <img data-atropos-offset="4" src="img/bg1.webp">
+                  </div>
+                  <div class="swiper-slide">
+                    <img data-atropos-offset="4" src="img/bg2.webp">
+                  </div>
+                  <div class="swiper-slide">
+                    <img data-atropos-offset="4" src="img/bg3.webp">
+                  </div>
+                  <div class="swiper-slide">
+                    <img data-atropos-offset="4" src="img/bg4.webp">
+                  </div>
+                  <div class="swiper-slide">
+                    <img data-atropos-offset="4" src="img/bg5.webp">
+                  </div>
+                </div>
+              </div>
             </div>
             <h1 data-atropos-offset="5" data-aos="fade-up" data-aos-delay="300">
               شركة وكب السيارات
@@ -89,8 +105,6 @@
           </div>
         </div>
       </div>
-    </section>
-    <section class="about" id="about">
     </section>
     <!--  services -->
     <section class="services" id="services">
@@ -708,7 +722,6 @@
         <div class="quickLinks">
           <a href="index.html"> الرئيسية </a>
           <a href="#!"> من نحن </a>
-          <a href="#!"> احجز الان </a>
           <a href="#!"> تواصل معنا </a>
         </div>
         <div class="social ">
@@ -923,38 +936,9 @@
   <script src="js/aos.js"></script>
   <!-- odometer counterUp  -->
   <script src="js/odometer.min.js"></script>
+  <!-- Swiper JS -->
+  <script src="js/swiper-bundle.min.js"></script>
   <!-- custom -->
   <script src="js/custom.js"></script>
-  <!-- Swiper JS -->
-  <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-  <!-- Initialize Swiper -->
-  <script>
-    //Categories Slider
-    var referencesSlider = new Swiper(".referencesSlider", {
-      spaceBetween: 12,
-      speed: 1000,
-      loop: true,
-      autoplay: {
-        delay: 2000,
-        disableOnInteraction: false,
-      },
-      // slidesPerView: "auto",
-      breakpoints: {
-        0: {
-          slidesPerView: 2,
-        },
-        340: {
-          slidesPerView: 3,
-        },
-        768: {
-          slidesPerView: 4,
-        },
-        991: {
-          slidesPerView: 5,
-        },
-      },
-    });
-  </script>
 </body>
-
 </html>
