--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <!-- Required meta tags -->
   <meta charset="UTF-8" />
@@ -21,6 +22,7 @@
   <!-- Custom style  -->
   <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
   <div class="spinner">
     <div class="loader">
@@ -628,16 +630,44 @@
           <div class="service" data-aos="fade-up">
             <div class="icon">
               <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-                xmlns:svgjs="http://svgjs.com/svgjs" width="512" height="512" x="0" y="0" viewBox="0 0 512 512"
-                style="enable-background:new 0 0 512 512" xml:space="preserve">
+                xmlns:svgjs="http://svgjs.com/svgjs"  x="0" y="0" viewBox="0 0 64 64"
+                style="enable-background:new 0 0 512 512" xml:space="preserve" class="">
                 <g>
-                  <g id="door_1" data-name="door 1">
+                  <g id="Layer_30" data-name="Layer 30">
                     <path
-                      d="M510.423,256.859c-.023-.151-.055-.3-.086-.449A85.627,85.627,0,0,0,507.08,244.5l-2.5-7.047A80.876,80.876,0,0,0,464.1,191.611L497.917,79.765A43.255,43.255,0,0,0,457.97,24.022c-.476-.011-.963-.022-1.45-.022H336C239.259,24,145.915,68.641,92.4,140.5l-32.7,43.89A52.6,52.6,0,0,0,20.13,211.979l-13.3,24.63A57.446,57.446,0,0,0,0,263.83V421.09a57.1,57.1,0,0,0,11.386,34.3l8.853,11.724A51.417,51.417,0,0,0,61.42,488H413.51c33.7,0,63.48-22.627,74.091-56.307l20.44-64.931A85.99,85.99,0,0,0,512,340.91v-67.7A86.156,86.156,0,0,0,510.423,256.859Zm-405.2-106.8C155.787,82.172,244.214,40,336,40H456.52c.353,0,.706.009.975.015A27.256,27.256,0,0,1,482.6,75.135L449.682,184H216V144a8,8,0,0,0-8-8H144a40.014,40.014,0,0,0-39.195,48H79.937ZM200,152v48H144a24,24,0,0,1,0-48ZM496,340.91a69.978,69.978,0,0,1-3.222,21.05L472.34,426.886C463.838,453.87,440.2,472,413.51,472H61.42A35.552,35.552,0,0,1,33,457.469l-8.856-11.728A41.021,41.021,0,0,1,16,421.09V263.83a41.409,41.409,0,0,1,4.909-19.619l13.3-24.635C40.721,207.5,52.848,200,65.86,200h46.162A39.962,39.962,0,0,0,144,216h64a8,8,0,0,0,8-8v-8H431.46c25.65,0,48.974,17.2,58.04,42.794l2.5,7.047c.755,2.133,1.393,4.3,1.935,6.485l-25.607,35.848a100.354,100.354,0,0,1-24.194,23.972L407.482,341.8A100.212,100.212,0,0,1,349.73,360H48a8,8,0,0,0,0,16H352a7.967,7.967,0,0,0,.946-.061A116.074,116.074,0,0,0,416.657,354.9l36.652-25.651A116.3,116.3,0,0,0,481.35,301.47L496,280.96Z"
+                      d="m60 30.86h-6.06a1 1 0 0 0 -1 1v1.93h-.94l-1.06-5a6.46 6.46 0 0 0 -6.3-4.79h-8.64v-13.07a2.91 2.91 0 0 0 -2.94-2.93h-6.79a2.89 2.89 0 0 0 -2.85-2.55h-.53a3.47 3.47 0 0 0 -6.65 0h-.52a2.89 2.89 0 0 0 -2.86 2.55h-6.79a2.91 2.91 0 0 0 -2.91 2.91v35.77a2.91 2.91 0 0 0 2.91 2.91h.54v8.16a3.26 3.26 0 0 0 3.25 3.25h5.54a3.26 3.26 0 0 0 3.25-3.25v-1h26.7v1a3.26 3.26 0 0 0 3.25 3.25h5.54a3.26 3.26 0 0 0 3.25-3.25v-7.69s0 0 0-.05l-.51-5.76a7.16 7.16 0 0 0 -3.88-5.79l-.56-2.67h.53v.9a1 1 0 0 0 .36.76 1 1 0 0 0 .64.24h.17l6-1a1 1 0 0 0 .84-1v-3.83a1 1 0 0 0 -.98-1zm-28.89-18.32v32.53h-23.11v-32.53zm-16.28-4.17a.9.9 0 0 1 .89-.9h1.36a1 1 0 0 0 1-1 1.49 1.49 0 1 1 3 0 .4.4 0 0 0 0 .18 1 1 0 0 0 1 .82h1.37a.9.9 0 0 1 .88.9v2.17h-9.5zm-9.67 38.31v-35.75a.91.91 0 0 1 .91-.93h6.76v.52h-5.83a1 1 0 0 0 -1 1v34.55a1 1 0 0 0 1 1h25.11a1 1 0 0 0 1-1v-34.53a1 1 0 0 0 -1-1h-5.81v-.54h6.76a.91.91 0 0 1 .91.91v27.77 8a.91.91 0 0 1 -.91.91h-27a.91.91 0 0 1 -.9-.91zm20.53 8.09v-1.9h12.62v1.9zm29.19-10.34.51 5.69v7.63a1.25 1.25 0 0 1 -1.25 1.25h-5.54a1.25 1.25 0 0 1 -1.25-1.25v-1h2.11a1 1 0 0 0 0-2h-9.15v-2.9a1 1 0 0 0 -1-1h-14.62a1 1 0 0 0 -1 1v2.9h-9.15a1 1 0 0 0 0 2h2.11v1a1.25 1.25 0 0 1 -1.25 1.25h-5.54a1.25 1.25 0 0 1 -1.25-1.25v-8.16h24.45a2.91 2.91 0 0 0 2.94-2.91v-7h13.72a5.15 5.15 0 0 1 5.16 4.75zm-18.88-6.74v-11.69h8.67a4.43 4.43 0 0 1 4.33 3.23l1.79 8.46zm23-2.85-4.06.67v-2.65h4.06z"
                       stroke-width="0px" data-original="#000000"></path>
                     <path
-                      d="M376,280h48a24,24,0,0,0,0-48H376a24,24,0,0,0,0,48Zm0-32h48a8,8,0,0,1,0,16H376a8,8,0,0,1,0-16Z"
+                      d="m41.22 45.53a2.6 2.6 0 0 0 .14 2.38l.15.25a3.48 3.48 0 0 0 3 1.67h6.09a3.55 3.55 0 0 0 3.47-3.61 3.66 3.66 0 0 0 -1.18-2.71 3.36 3.36 0 0 0 -2.58-.89h-.11l-7.2 1.48a2.43 2.43 0 0 0 -1.78 1.43zm1.83.8a.47.47 0 0 1 .32-.27l7.16-1.45a1.4 1.4 0 0 1 1 .37 1.67 1.67 0 0 1 .53 1.24 1.55 1.55 0 0 1 -1.47 1.61h-6.12a1.45 1.45 0 0 1 -1.24-.7l-.15-.25a.59.59 0 0 1 -.03-.55z"
                       stroke-width="0px" data-original="#000000"></path>
+                    <path
+                      d="m10.09 20.14h4.22a1 1 0 0 0 1-1v-4a1 1 0 0 0 -1-1h-4.22a1 1 0 0 0 -1 1v4a1 1 0 0 0 1 1zm1-4h2.22v2h-2.22z"
+                      stroke-width="0px" data-original="#000000"></path>
+                    <path d="m16.84 16.7h5.7a1 1 0 0 0 0-2h-5.7a1 1 0 0 0 0 2z" stroke-width="0px" data-original="#000000">
+                    </path>
+                    <path d="m16.84 19.26h12.57a1 1 0 0 0 0-2h-12.57a1 1 0 0 0 0 2z" stroke-width="0px"
+                      data-original="#000000"></path>
+                    <path
+                      d="m10.09 28h4.22a1 1 0 0 0 1-1v-4a1 1 0 0 0 -1-1h-4.22a1 1 0 0 0 -1 1v4a1 1 0 0 0 1 1zm1-4h2.22v2h-2.22z"
+                      stroke-width="0px" data-original="#000000"></path>
+                    <path d="m16.84 24.55h5.7a1 1 0 0 0 0-2h-5.7a1 1 0 0 0 0 2z" stroke-width="0px" data-original="#000000">
+                    </path>
+                    <path d="m16.84 27.11h12.57a1 1 0 0 0 0-2h-12.57a1 1 0 0 0 0 2z" stroke-width="0px"
+                      data-original="#000000"></path>
+                    <path
+                      d="m10.09 35.84h4.22a1 1 0 0 0 1-1v-4a1 1 0 0 0 -1-1h-4.22a1 1 0 0 0 -1 1v4a1 1 0 0 0 1 1zm1-4h2.22v2h-2.22z"
+                      stroke-width="0px" data-original="#000000"></path>
+                    <path d="m16.84 32.4h5.7a1 1 0 0 0 0-2h-5.7a1 1 0 1 0 0 2z" stroke-width="0px" data-original="#000000">
+                    </path>
+                    <path d="m16.84 35h12.57a1 1 0 1 0 0-2h-12.57a1 1 0 1 0 0 2z" stroke-width="0px"
+                      data-original="#000000"></path>
+                    <path
+                      d="m10.09 43.69h4.22a1 1 0 0 0 1-1v-4a1 1 0 0 0 -1-1h-4.22a1 1 0 0 0 -1 1v4a1 1 0 0 0 1 1zm1-4h2.22v2h-2.22z"
+                      stroke-width="0px" data-original="#000000"></path>
+                    <path d="m16.84 40.25h5.7a1 1 0 0 0 0-2h-5.7a1 1 0 0 0 0 2z" stroke-width="0px" data-original="#000000">
+                    </path>
+                    <path d="m16.84 42.81h12.57a1 1 0 0 0 0-2h-12.57a1 1 0 0 0 0 2z" stroke-width="0px"
+                      data-original="#000000"></path>
                   </g>
                 </g>
               </svg>
@@ -941,4 +971,5 @@
   <!-- custom -->
   <script src="js/custom.js"></script>
 </body>
+
 </html>
