--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       <!-- nav menu -->
       <div class="navMenu">
         <a class="navLink" href="index.html"> الرئيسية </a>
-        <a class="navLink" href="#!"> من نحن </a>
-        <a class="navLink btn" href="#!"> تواصل معنا </a>
+        <a class="navLink" href="about.html"> من نحن </a>
+        <a class="navLink btn" href="contact.html"> تواصل معنا </a>
       </div>
       <!-- toggle btn -->
       <div class="navBtn">
@@ -751,8 +751,8 @@
       <div class="top">
         <div class="quickLinks">
           <a href="index.html"> الرئيسية </a>
-          <a href="#!"> من نحن </a>
-          <a href="#!"> تواصل معنا </a>
+          <a href="about.html"> من نحن </a>
+          <a href="contact.html"> تواصل معنا </a>
         </div>
         <div class="social ">
           <ul>
