--- a/about.html
+++ b/about.html
@@ -93,8 +93,8 @@
           </div>
         </div>
         <div class="experience">
-          <span> 25 </span>
-          عاماً من الخبرة
+          <span> 10 </span>
+          اعوام من الخبرة
         </div>
       </div>
       <div class="col">
