--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
         <div class="atropos-rotate">
           <div class="atropos-inner">
             <div class="bgImage">
-              <!-- Swiper -->
               <div class="swiper topSlider">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
@@ -97,6 +96,7 @@
                 </div>
               </div>
             </div>
+            <div class="swiper-pagination  topSliderPagination"></div>
             <h1 data-atropos-offset="5" data-aos="fade-up" data-aos-delay="300">
               شركة وكب السيارات
             </h1>
